Update vectors with correctly cropped versions

--- a/css/styles.css
+++ b/css/styles.css
@@ -363,6 +363,8 @@ p {
 	display: block;
 	width: 40vw;
 	margin: auto;
+	margin-top: 4em;
+	margin-bottom: 4em;
 }
 
 .row.discovery-series .upcoming {
@@ -411,6 +413,8 @@ p {
 	display: block;
 	width: 40vw;
 	margin: auto;
+	margin-top: 4em;
+	margin-bottom: 4em;
 }
 
 .row.nbtc .what-is-nbtc {
